[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtubetranscriptdevapi"
version = "0.1.0"
description = "Official Python SDK for YouTubeTranscript.dev — extract, transcribe, and translate YouTube video transcripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "YouTubeTranscript.dev", email = "support@youtubetranscript.dev" }]
keywords = [
    "youtube", "transcript", "subtitles", "captions", "asr",
    "speech-recognition", "youtube-transcript", "video-to-text",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
async = ["httpx[http2]>=0.24.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20", "ruff>=0.1"]

[project.urls]
Homepage = "https://youtubetranscript.dev"
Documentation = "https://youtubetranscript.dev/api-docs"
Repository = "https://github.com/Youtube-Transcript-Dev/youtube-transcript-python-sdk"
Issues = "https://github.com/Youtube-Transcript-Dev/youtube-transcript-python-sdk/issues"
Dashboard = "https://youtubetranscript.dev/dashboard"

[tool.hatch.build.targets.wheel]
packages = ["src/youtubetranscript"]

[tool.ruff]
target-version = "py38"
line-length = 100
